File adding, deleting, renaming

--- a/backend/templates/navbar.html
+++ b/backend/templates/navbar.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sidebar Menu</title>
+  <title>Doctor</title>
   <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
 </head>
@@ -18,8 +18,8 @@
       <span class="shrink-btn">
         <i class='bx bx-chevron-left'></i>
       </span>
-      <img src="./img/logo.png" class="logo" alt="">
-      <h2 class="hide">DOCTOR</h3>
+      <!-- <img src="./img/logo.png" class="logo" alt=""> -->
+      <!-- <h2 class="hide">DOCTOR</h3> -->
     </div>
 
     <!-- <div class="search">
@@ -34,24 +34,14 @@
         <li class="tooltip-element" data-tooltip="0">
           <a href="/api/upload" class="active" data-active="0">
             <div class="icon">
-              <i class='bx bx-tachometer'></i>
-              <i class='bx bxs-tachometer'></i>
-            </div>
-            <span class="link hide">Upload File</span>
-          </a>
-        </li>
-        <li class="tooltip-element" data-tooltip="1">
-          <a href="#" data-active="1">
-            <div class="icon">
               <i class='bx bx-folder'></i>
               <i class='bx bxs-folder'></i>
             </div>
             <span class="link hide">Documents</span>
           </a>
         </li>
-
-        <li class="tooltip-element" data-tooltip="2">
-          <a href="#" data-active="2">
+        <li class="tooltip-element" data-tooltip="1">
+          <a href="#" data-active="1">
             <div class="icon">
               <i class='bx bx-bar-chart-square'></i>
               <i class='bx bxs-bar-chart-square'></i>
@@ -59,8 +49,8 @@
             <span class="link hide">Analytics</span>
           </a>
         </li>
-        <li class="tooltip-element" data-tooltip="3">
-            <a href="#" data-active="3">
+        <li class="tooltip-element" data-tooltip="2">
+            <a href="#" data-active="2">
               <div class="icon">
                 <i class='bx bx-notepad'></i>
                 <i class='bx bxs-notepad'></i>
@@ -68,8 +58,8 @@
               <span class="link hide">Account</span>
             </a>
           </li>
-          <li class="tooltip-element" data-tooltip="4">
-            <a href="#" data-active="4">
+          <li class="tooltip-element" data-tooltip="3">
+            <a href="#" data-active="3">
               <div class="icon">
                 <i class='bx bx-cog'></i>
                 <i class='bx bxs-cog'></i>
@@ -77,8 +67,8 @@
               <span class="link hide">Settings</span>
             </a>
           </li>
-          <li class="tooltip-element" data-tooltip="5">
-            <a href="#" data-active="5">
+          <li class="tooltip-element" data-tooltip="4">
+            <a href="#" data-active="4">
               <div class="icon">
                 <i class='bx bx-help-circle'></i>
                 <i class='bx bxs-help-circle'></i>
