--- a/backend/statics/css/navbar.css
+++ b/backend/statics/css/navbar.css
@@ -44,6 +44,7 @@ nav {
   display: flex;
   flex-direction: column;
   transition: width 0.5s ease-in-out;
+  text-decoration: none;
 }
 
 nav::before {
@@ -80,8 +81,9 @@ main .copyright span {
 
 .sidebar-top {
   position: relative;
-  display: flex;
+  /* display: flex; */
   align-items: center;
+  text-align: center;
 }
 
 .sidebar-top .logo {
