--- a/backend/templates/upload.html
+++ b/backend/templates/upload.html
@@ -5,30 +5,156 @@
 <!DOCTYPE html>
 <html>
 
-<body class="m-5">
+<head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'css/docs.css' %}">
+    <link rel="stylesheet" href="{% static 'css/upload.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> 
+    <script src="{% static 'js/upload.js' %}"></script>
+    <script src="{% static 'js/navbar.js' %}"></script>
+</head>
+
+<body>
     <div class="container">
-
-        <div class="row justify-content-center">
-            <div class="col-md-4">
-
-                <a href="{% url 'home' %}" class="btn btn-dark my-3">Go Back</a>
-                <div class="card">
-
-                <div class="card">
-
-                    <form method='POST' action="" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <div class="form-group m-3">
-                          <input required name="files" type="file" id="file-upload" multiple class="form-control-file">
+        <div class="table-responsive">
+            <div class="table-wrapper">
+                <div class="table-title">
+                    <div class="row">
+                        <div class="col-sm-6">
+                          
+                            <form id='form' method='POST' action="" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <div class="btn btn-success" onclick="document.querySelector('input[name=\'files\']').click();">
+                                    <input style="display: none;" onchange="this.form.submit()" class="form-control-file" required name="files" type="file" multiple>
+                                    <i class="material-icons">&#xE147;</i> 
+                                    <span>Add Files</span>
+                                </div>
+                            </form>
                         </div>
-                      
-                        <button type='submit' class="btn btn-primary m-3">Submit</button>
-                      </form>
+                    </div>
                 </div>
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th class="filename">Filename</th>
+                            <th>Format</th>
+                            <th>Size</th>
+                            <th>Date Uploaded</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for file in files %}
+                        <tr>
+                            <td>{{forloop.counter}}</td>
+                            <td>{{file.file_name}}</td>
+                            <td>{{file.file_type}}</td>
+                            <td>{{file.file_size}}</td>
+                            <td>26-01-2023-13:51:23</td>
+                            <td>
+                                <a href="#edit_file{{forloop.counter}}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                
+                                <div id="edit_file{{forloop.counter}}" class="modal fade">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <form method="POST" action="/api/rename/">
+                                                {% csrf_token %}
+                                                <div class="modal-header">						
+                                                    <h4 class="modal-title">Rename File</h4>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                </div>
+                                                <div class="modal-body">					
+                                                    <div class="form-group">
+                                                        <label>Name</label>
+                                                        <input name="new_filename" type="text" class="form-control" required>
+                                                    </div>				
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                                                    <input type="submit" class="btn btn-info" value="Save">
+                                                    <input type="hidden" name="filename" value="{{file.file_name}}">
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <a href="#delete_file{{forloop.counter}}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+ 
+                                <div id="delete_file{{forloop.counter}}" class="modal fade">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <form method="POST" action="/api/delete/">
+                                                {% csrf_token %}
+                                                <div class="modal-header">						
+                                                    <h4 class="modal-title">Delete File</h4>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                </div>
+                                                <div class="modal-body">					
+                                                    <p>Are you sure you want to delete this document?</p>
+                                                    <p class="text-warning"><small>It will remove analysis data for this file.</small></p>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                                                    <input type="submit" class="btn btn-danger" value="Delete">
+                                                    <input type="hidden" name="filename" value="{{file.file_name}}">
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
-        </div>
+        </div>        
     </div>
-</body>
 
+<!-- Add Modal HTML -->
+<div id="add_files" class="modal fade">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<form>
+				<div class="modal-header">						
+					<h4 class="modal-title">Add Employee</h4>
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				</div>
+				<div class="modal-body">					
+					<div class="form-group">
+						<label>Name</label>
+						<input type="text" class="form-control" required>
+					</div>
+					<div class="form-group">
+						<label>Email</label>
+						<input type="email" class="form-control" required>
+					</div>
+					<div class="form-group">
+						<label>Address</label>
+						<textarea class="form-control" required></textarea>
+					</div>
+					<div class="form-group">
+						<label>Phone</label>
+						<input type="text" class="form-control" required>
+					</div>					
+				</div>
+				<div class="modal-footer">
+					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+					<input type="submit" class="btn btn-success" value="Add">
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+</body>
 </html>
+
 {% endblock %}
