--- a/backend/statics/css/docs.css
+++ b/backend/statics/css/docs.css
@@ -94,7 +94,7 @@ table.table td a:hover {
 	color: #2196F3;
 }
 table.table td a.edit {
-	color: #FFC107;
+	color: #cca634;
 }
 table.table td a.delete {
 	color: #F44336;
