--- a/backend/templates/navbar.html
+++ b/backend/templates/navbar.html
@@ -55,7 +55,7 @@
                 <i class='bx bx-notepad'></i>
                 <i class='bx bxs-notepad'></i>
               </div>
-              <span class="link hide">Account</span>
+              <span class="link hide">Dictionary</span>
             </a>
           </li>
           <li class="tooltip-element" data-tooltip="3">
@@ -97,15 +97,14 @@
         <i class='bx bx-user'></i>
       </a>
       <div class="admin-user tooltip-element" data-tooltip="1">
-        <div class="admin-profile hide">
-          <img src="./img/face-1.png" alt="">
-          <div class="admin-info">
-            <h3>Jakub Zolkos</h3>
-          </div>
-        </div>
         <a href="{% url 'account_logout' %}" class="log-out">
           <i class='bx bx-log-out'></i>
         </a>
+        <div class="admin-profile hide">
+          <div class="admin-info">
+            <h3>Log Out</h3>
+          </div> 
+        </div> 
       </div>
       <div class="tooltip">
         <span class="show"></span>
