--- a/backend/statics/css/navbar.css
+++ b/backend/statics/css/navbar.css
@@ -6,6 +6,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  text-decoration: none !important;
 }
 
 :root {
@@ -44,7 +45,6 @@ nav {
   display: flex;
   flex-direction: column;
   transition: width 0.5s ease-in-out;
-  text-decoration: none;
 }
 
 nav::before {
@@ -81,9 +81,8 @@ main .copyright span {
 
 .sidebar-top {
   position: relative;
-  /* display: flex; */
+  display: flex;
   align-items: center;
-  text-align: center;
 }
 
 .sidebar-top .logo {
@@ -328,6 +327,7 @@ nav:hover .shrink-btn,
 .tooltip-element:hover ~ .tooltip {
   opacity: 1;
   pointer-events: all;
+  text-decoration: none !important;
 }
 
 /* When the menu shrinks */
