--- a/backend/templates/upload.html
+++ b/backend/templates/upload.html
@@ -31,7 +31,7 @@
                             <form id='form' method='POST' action="" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="btn btn-success" onclick="document.querySelector('input[name=\'files\']').click();">
-                                    <input style="display: none;" onchange="this.form.submit()" class="form-control-file" required name="files" type="file" multiple>
+                                    <input accept=".pdf,.doc,.docx,.png,.jpg" style="display: none;" onchange="this.form.submit()" class="form-control-file" required name="files" type="file" multiple>
                                     <i class="material-icons">&#xE147;</i> 
                                     <span>Add Files</span>
                                 </div>
@@ -72,7 +72,7 @@
                                                 </div>
                                                 <div class="modal-body">					
                                                     <div class="form-group">
-                                                        <label>Name</label>
+                                                        <label>New Name</label>
                                                         <input name="new_filename" type="text" class="form-control" required>
                                                     </div>				
                                                 </div>
@@ -99,7 +99,7 @@
                                                 </div>
                                                 <div class="modal-body">					
                                                     <p>Are you sure you want to delete this document?</p>
-                                                    <p class="text-warning"><small>It will remove analysis data for this file.</small></p>
+                                                    <p style="color: rgb(207, 61, 61);"><small>It will remove analysis data for this file.</small></p>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
@@ -118,42 +118,6 @@
             </div>
         </div>        
     </div>
-
-<!-- Add Modal HTML -->
-<div id="add_files" class="modal fade">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<form>
-				<div class="modal-header">						
-					<h4 class="modal-title">Add Employee</h4>
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				</div>
-				<div class="modal-body">					
-					<div class="form-group">
-						<label>Name</label>
-						<input type="text" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label>Email</label>
-						<input type="email" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label>Address</label>
-						<textarea class="form-control" required></textarea>
-					</div>
-					<div class="form-group">
-						<label>Phone</label>
-						<input type="text" class="form-control" required>
-					</div>					
-				</div>
-				<div class="modal-footer">
-					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-					<input type="submit" class="btn btn-success" value="Add">
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
 </body>
 </html>
 
